# npmai-agent

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
npmai-agent/: NPMAI_AGENTS.ipynb  NPMAI_AGENTS.py  Tools_Developer_CLI.py  Tools_cloud_devops.py  Tools_communication_extended.py  Tools_data_research.py  Tools_media.py  Tools_productivity.py  __init__.py  agent_core.py  core.py  monolith_package_prep.py  npmai-agent.py  npmai_agents.py  pyproject.toml
npmai-agents/: Tools_Developer_CLI.py
npmai_agent/: Tools_Developer_CLI.py  Tools_business.py  Tools_cloud_devops.py  Tools_communication_extended.py  Tools_creative.py  Tools_data_research.py  Tools_media.py  Tools_security_ai.py  Tools_system_hardware.py  __init__.py  agent_core.py  cli.py  monolith_package_prep.py  npmai_agents.py
npmai_agents/: Tools_Developer_CLI.py  Tools_business.py  Tools_cloud_devops.py  Tools_communication_extended.py  Tools_creative.py  Tools_data_research.py  Tools_media.py  Tools_productivity.py  Tools_security_ai.py  Tools_system_hardware.py  __init__.py  agent_core.py  cli.py  core.py  npmai_agents.py
npmai_agents/npmai_agents/: Tools_data_research.py  cli.py  npmai_agents.py
