[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npmai_agents"
version = "1.0.0"
description = "Production-grade autonomous AI agent framework with 1,371 tools across 100 classes and a 5-role LLM pipeline — built on the NPMAI ECOSYSTEM."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Sonu Kumar", email = "sonuramashishnpm@gmail.com" }
]
keywords = [
    "ai", "agent", "automation", "llm", "npmai", "npmai-ecosystem",
    "desktop-automation", "multi-agent", "rag", "open-source",
    "tool-registry", "agentic-ai", "free-llm", "autonomous-agent", "local-llm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "npmai>=0.1.9",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
full = [
    "boto3>=1.34.0",
    "stripe>=7.0.0",
    "razorpay>=1.3.0",
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.1.0",
    "paho-mqtt>=1.6.0",
    "paramiko>=3.3.0",
    "kubernetes>=28.0.0",
    "python-terraform>=0.10.1",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "PyGithub>=2.1.0",
    "slack-sdk>=3.23.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.0",
    "openpyxl>=3.1.0",
    "pandas>=2.1.0",
    "Pillow>=10.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "pyperclip>=1.8.2",
    "schedule>=1.2.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "tweepy>=4.14.0",
    "pywhatkit>=5.4",
    "qrcode>=7.4.2",
    "pyautogui>=0.9.54",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "discord.py>=2.3.2",
    "telethon>=1.32.0",
    "notion-client>=2.2.1",
    "todoist-api-python>=2.1.3",
    "jira>=3.5.2",
    "langchain-core>=0.1.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage      = "https://npmai.netlify.app"
Documentation = "https://npmai.netlify.app"
Repository    = "https://github.com/sonuramashishnpm/npmai-agent"
"Bug Tracker" = "https://github.com/sonuramashishnpm/npmai-agent/issues"
PyPI          = "https://pypi.org/project/npmai_agents"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
